@@ -1,3 +1,8 @@
+2007-02-06  Martin Mares  <mj@ucw.cz>
+
+	* lib/types.h, lib/configure: Solaris should use <stdint.h> to get precise
+	integer types.
+
 2007-02-04  Martin Mares  <mj@ucw.cz>
 
 	* lspci.c: alloca() needs <alloca.h>.
